don't check in css not scss...idiot haha

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,3 +3,11 @@
 		<api-explorer></api-explorer>
 	</div>
 </div>
+<div id="metadata-tab">
+	<div class="meta-handle">
+		Metadata
+	</div>
+	<div class="meta-content-wrapper">
+
+	</div>
+</div>
