--- a/public/scss/styles/styles.scss
+++ b/public/scss/styles/styles.scss
@@ -1,18 +1,42 @@
 @import "bootstrap";
 @import "font-awesome";
 @import "variables";
-
 html {
-	color: $blue;
+    color: $blue;
 }
 
 body {
-	padding-top: 50px;
+    padding-top: 50px;
 }
 
 .navbar-brand {
-	img {
-		display:inline-block;
-		margin-right:10px;
-	}
+    img {
+        display: inline-block;
+        margin-right: 10px;
+    }
+}
+
+#metadata-tab {
+    position: fixed;
+    top: 80px;
+    background: $dark-blue;
+    padding: 10px;
+    right: -100px;
+    .meta-handle {
+        width: 80px;
+        color: white;
+        cursor: pointer;
+        -webkit-transition: all 0.2s ease;
+        transition: all 0.2s ease;
+    }
+    .meta-handle:hover {
+        box-shadow: 0 0 5px black;
+        -webkit-transition: all 0.2s ease;
+        transition: all 0.2s ease;
+    }
+    .meta-content-wrapper {
+        position: relative;
+        width: 100%;
+        height: 100%;
+    }
 }
