--- a/public/scss/styles/styles.scss
+++ b/public/scss/styles/styles.scss
@@ -21,11 +21,19 @@ body {
     top: 80px;
     background: $dark-blue;
     padding: 10px;
-    right: -100px;
+    right: -220px;
+    height: 450px;
+    width: 220px;
+
     .meta-handle {
+    	background: $dark-blue;
         width: 80px;
         color: white;
         cursor: pointer;
+        top: 0;
+        padding: 10px;
+        left: -80px;
+        position:absolute;
         -webkit-transition: all 0.2s ease;
         transition: all 0.2s ease;
     }
