--- a/public/scss/styles/styles.scss
+++ b/public/scss/styles/styles.scss
@@ -1,9 +1,9 @@
 @import "bootstrap";
 @import "font-awesome";
 @import "variables";
-
 body {
     padding-top: 50px;
+    padding-bottom: 30px;
 }
 
 .navbar-brand {
@@ -13,35 +13,110 @@ body {
     }
 }
 
-#metadata-tab {
-    position: fixed;
-    top: 80px;
-    background: $dark-blue;
-    padding: 10px;
-    right: -220px;
-    height: 450px;
-    width: 220px;
+.nav {
+    button {
+        margin-top: 8px;
+    }
+}
 
-    .meta-handle {
-    	background: $dark-blue;
-        width: 80px;
+.btn-orange {
+    background: $orange-primary;
+    color: white;
+}
+
+.btn-orange:hover {
+    background: $orange-darker;
+}
+
+.sidebar {
+    position: fixed;
+    right: 0;
+    height: 100%;
+    width: 240px;
+    padding: 10px;
+    .sidebar-content-wrapper {
+        position: relative;
+        height: 100%;
+        width: 100%;
+        overflow: hidden;
+    }
+    .handle {
         color: white;
         cursor: pointer;
         top: 0;
-        padding: 10px;
-        left: -80px;
-        position:absolute;
+        height: 50px;
+        line-height: 50px;
+        text-align: center;
+        position: absolute;
         -webkit-transition: all 0.2s ease;
         transition: all 0.2s ease;
     }
-    .meta-handle:hover {
+    .handle:hover {
         box-shadow: 0 0 5px black;
         -webkit-transition: all 0.2s ease;
         transition: all 0.2s ease;
     }
-    .meta-content-wrapper {
-        position: relative;
-        width: 100%;
-        height: 100%;
+    &.ng-hide-remove {
+        -webkit-transition: all 0.1s linear;
+        transition: all 0.1s linear;
+        right: 0;
+    }
+    &.ng-hide {
+        -webkit-transition: all 0.1s linear;
+        transition: all 0.1s linear;
+        right: -240px;
+        display: block !important;
+    }
+}
+
+.query-info {
+    top: 100px;
+    background: $orange-primary;
+    .handle {
+        background: $orange-primary;
+        width: 80px;
+        left: -80px;
+    }
+}
+
+.metadata {
+    top: 50px;
+    background: $dark-blue;
+    .handle {
+        background: $dark-blue;
+        width: 80px;
+        left: -80px;
+    }
+    .sidebar-content-wrapper {
+        .field-list {
+            width: 100%;
+            height: 100%;
+            margin-top: 10px;
+            padding-bottom: 20px;
+            position: relative;
+            overflow-y: scroll;
+            word-wrap: break-word;
+        }
+        .field-search {
+            position: relative;
+        }
+        ul {
+            padding-left: 12px;
+            padding-right: 2px;
+            color: white;
+            list-style-type: none;
+            li {
+                padding: 8px 0;
+
+                &:not(:last-child) {
+                    border-bottom: 1px solid white;
+                }
+
+                span {
+                    padding-left: 5px;
+                    color: #bfbfbf;
+                }
+            }
+        }
     }
 }
