--- a/public/scss/styles/styles.scss
+++ b/public/scss/styles/styles.scss
@@ -57,13 +57,13 @@ body {
         transition: all 0.2s ease;
     }
     &.ng-hide-remove {
-        -webkit-transition: all 0.1s linear;
-        transition: all 0.1s linear;
+        -webkit-transition: all 0.1s cubic-bezier(.74, .19, .29, .78);
+        transition: all 0.1s cubic-bezier(.74, .19, .29, .78);
         right: 0;
     }
     &.ng-hide {
-        -webkit-transition: all 0.1s linear;
-        transition: all 0.1s linear;
+        -webkit-transition: all 0.1s cubic-bezier(.74, .19, .29, .78);
+        transition: all 0.1s cubic-bezier(.74, .19, .29, .78);
         right: -240px;
         display: block !important;
     }
@@ -77,11 +77,13 @@ body {
         width: 80px;
         left: -80px;
     }
+    z-index: 9;
 }
 
 .metadata {
     top: 50px;
     background: $dark-blue;
+    z-index: 10;
     .handle {
         background: $dark-blue;
         width: 80px;
