--- a/templates/home.html
+++ b/templates/home.html
@@ -2,48 +2,50 @@
     <h3>Example Queries <button class="right btn btn-info" data-target="#demo-queries" data-toggle="collapse">Toggle</button></h3>
     <p>Test out the API with these prebuilt queries!</p>
     <div class="row collapse in" id="demo-queries">
-        <div class="col-sm-3" ng-repeat="query in Home.data.queries">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">{{query.title}}</h3>
-                </div>
-                <div class="panel-body">
-                    {{query.description}}
-                    <br>
-                    <br>
-                    <a href="#explorer-box" class="btn btn-success" du-smooth-scroll ng-click="Home.fillQuery(query)">Try it out</a>
+        <div ng-repeat="query in Explorer.data.queries">
+            <div class="clearfix" ng-if="$index % 4 == 0"></div>
+            <div class="col-sm-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">{{query.title}}</h3>
+                    </div>
+                    <div class="panel-body">
+                        {{query.description}}
+                        <br>
+                        <br>
+                        <a href="#explorer-box" class="btn btn-success" offset="80" du-smooth-scroll ng-click="Explorer.fillQuery(query)">Try it out</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="row">
-    <div class="col-sm-12" id="explorer-box">
-        <div api-explorer search="Home.data.fillQuery" loader="'public/img/default.gif'"></div>
+<div class="row" id="explorer-box">
+    <div class="col-sm-12">
+        <div api-explorer search="Explorer.data.fillQuery" loader="'public/img/default.gif'"></div>
     </div>
 </div>
-<div class="sidebar metadata" ng-hide="Home.data.metadata.hidden">
-    <div class="handle" ng-click="Home.toggleMeta()">
+<div class="sidebar metadata" ng-hide="Explorer.data.metadata.hidden">
+    <div class="handle" ng-click="Explorer.toggleMeta()">
         Fields
     </div>
     <div class="sidebar-content-wrapper">
         <div class="field-search">
-            <input type="text" ng-model="Home.data.metadata.search" ng-change="Home.filterMeta()" placeholder="Search..." class="form-control">
+            <input type="text" ng-model="Explorer.data.metadata.search" ng-change="Explorer.filterMeta()" placeholder="Search..." class="form-control">
         </div>
         <div class="field-list">
             <ul>
-                <li ng-repeat="field in Home.data.metadata.fields | orderBy: name">
+                <li ng-repeat="field in Explorer.data.metadata.fields | orderBy:'name'">
                     {{field.name}}:<span>{{field.type}}</span>
                 </li>
             </ul>
         </div>
     </div>
 </div>
-<div class="sidebar query-info" ng-hide="Home.data.query_info.hidden">
-	<div class="handle" ng-click="Home.toggleQueryInfo()">
+<div class="sidebar query-info" ng-hide="Explorer.data.query_info.hidden">
+    <div class="handle" ng-click="Explorer.toggleQueryInfo()">
         Query
     </div>
     <div class="sidebar-content-wrapper">
-        
     </div>
 </div>
