rounded out the query tab

--- a/public/scss/imports/_variables.scss
+++ b/public/scss/imports/_variables.scss
@@ -1,4 +1,6 @@
 $blue: 'blue';
 $dark-blue: #253340;
+$blue-darkest: #1c2731;
 $orange-primary: #ec6952;
 $orange-darker: #eb6047;
+$sidebar-width: 270px;
