--- a/public/scss/styles/styles.scss
+++ b/public/scss/styles/styles.scss
@@ -1,6 +1,8 @@
 @import "bootstrap";
 @import "font-awesome";
 @import "variables";
+@import "helpers";
+
 body {
     padding-top: 50px;
     padding-bottom: 30px;
@@ -14,14 +16,31 @@ body {
 }
 
 .nav {
-    button {
-        margin-top: 8px;
+    a {
+        &.btn {
+            margin-top: 4px;
+            padding: 10px 5px;
+            color: white !important;
+
+            &:hover, &:active {
+                background-color: $orange-darker !important;
+            }
+
+            &:visited, &:focus {
+                background-color: $orange-primary !important;
+            }
+        }
     }
 }
 
 .btn-orange {
     background: $orange-primary;
     color: white;
+}
+
+.btn-dark-orange {
+    background: $orange-darker;
+    color:white;
 }
 
 .btn-orange:hover {
@@ -34,7 +53,7 @@ body {
     position: fixed;
     right: 0;
     height: 100%;
-    width: 240px;
+    width: $sidebar-width;
     padding: 10px;
     .sidebar-content-wrapper {
         position: relative;
@@ -52,6 +71,10 @@ body {
         position: absolute;
         -webkit-transition: all 0.2s ease;
         transition: all 0.2s ease;
+
+        &.open {
+            background-color: $blue-darkest;
+        }
     }
     .handle:hover {
         box-shadow: 0 0 5px black;
@@ -66,8 +89,12 @@ body {
     &.ng-hide {
         -webkit-transition: all 0.1s cubic-bezier(.74, .19, .29, .78);
         transition: all 0.1s cubic-bezier(.74, .19, .29, .78);
-        right: -240px;
+        right: -$sidebar-width;
         display: block !important;
+    }
+
+    ul {
+        list-style-type: none;
     }
 }
 
@@ -78,8 +105,41 @@ body {
         background: $orange-primary;
         width: 80px;
         left: -80px;
+
+        &.open {
+            background-color: $orange-darker;
+        }
     }
     z-index: 9;
+
+    .sidebar-content-wrapper {
+        width:100%;
+        height:100%;
+        overflow:hidden;
+        padding-right:5px;
+
+        .scrollable {
+             > ul {
+                padding-left: 12px;
+
+                .filter-type {
+                    font-size: 1.3em;
+                    color: white;
+                }
+
+                > li {
+                    padding: 8px 0;
+                    &:not(:last-child) {
+                        border-bottom: 1px solid white;
+                    }
+
+                    &:last-child {
+                        padding-bottom: 190px;
+                    }
+                }
+            }
+        }
+    }
 }
 
 .metadata {
@@ -111,7 +171,6 @@ body {
             padding-bottom: 15px;
             padding-right: 8px;
             color: white;
-            list-style-type: none;
             li {
                 padding: 8px 0;
 
@@ -126,4 +185,10 @@ body {
             }
         }
     }
+}
+
+.scrollable {
+    width: 100%;
+    height: 100%;
+    overflow-y:scroll;
 }
