--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
     on-walkthrough-hide="Base.finishedTutorial()">
 </walkthrough>
 <div class="container" ng-disable-scroll="data.tutorial.active">
-    <h1 class="text-center">API Explorer</h1>
+    <h1 class="text-center">API V2 Explorer</h1>
     <div class="row">
         <div class="col-sm-12" ui-view></div>
     </div>
