--- a/public/scss/styles/styles.scss
+++ b/public/scss/styles/styles.scss
@@ -55,6 +55,7 @@ body {
     height: 100%;
     width: $sidebar-width;
     padding: 10px;
+    box-shadow: 0 0 5px black;
     .sidebar-content-wrapper {
         position: relative;
         height: 100%;
@@ -69,13 +70,13 @@ body {
         line-height: 50px;
         text-align: center;
         position: absolute;
-        -webkit-transition: all 0.2s ease;
-        transition: all 0.2s ease;
+        -webkit-transition: all 0.1s ease;
+        transition: all 0.1s ease;
     }
     .handle:hover {
-        box-shadow: 0 0 5px black;
-        -webkit-transition: all 0.2s ease;
-        transition: all 0.2s ease;
+        font-size:1.2em;
+        -webkit-transition: all 0.1s ease;
+        transition: all 0.1s ease;
     }
     &.ng-hide-remove {
         -webkit-transition: all 0.1s cubic-bezier(.74, .19, .29, .78);
@@ -118,22 +119,26 @@ body {
         padding-right:5px;
 
         .scrollable {
-             > ul {
+            ul {
                 padding-left: 12px;
 
                 .filter-type {
                     font-size: 1.3em;
                     color: white;
+                    margin-bottom:10px;
+                    margin-top: 5px;
                 }
+            }
 
+            > ul {
                 > li {
                     padding: 8px 0;
-                    &:not(:last-child) {
-                        border-bottom: 1px solid white;
-                    }
-
                     &:last-child {
                         padding-bottom: 190px;
+                    }
+
+                    &:not(:last-child) {
+                        border-bottom: 1px solid white;
                     }
                 }
             }
