--- a/templates/home.html
+++ b/templates/home.html
@@ -54,7 +54,7 @@
     </div>
     <div class="sidebar-content-wrapper">
         <h4 class="text-center">Parameters</h4>
-        <h5 class="text-center text-white">Read the full <a href="http://retsrabbit.com/docs" target="_blank">docs</a></h5>
+        <h5 class="text-center text-white">Read the full <a href="http://retsrabbit.com/docs/v2" target="_blank">docs</a></h5>
         <hr>
         <div class="scrollable">
             <ul>
