--- a/public/scss/styles/styles.scss
+++ b/public/scss/styles/styles.scss
@@ -206,6 +206,11 @@ body {
     }
 }
 
+.angular-google-map-container, #rr-map {
+    width: 100%;
+    height: 450px;
+}
+
 .scrollable {
     width: 100%;
     height: 100%;
