--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -57,6 +57,27 @@ body {
     }
 }
 
+html, body {
+    height: 100%;
+}
+
+#wrap {
+    min-height: 100%;
+}
+
+#main {
+    overflow:auto;
+    padding-bottom:50px; /* this needs to be bigger than footer height*/
+}
+
+.footer {
+    position: relative;
+    margin-top: -4px; /* negative value of footer height */
+    height: 40px;
+    clear:both;
+    padding-top:20px;
+}
+
 .renderjson {
     max-height: 500px;
 }
