adjusted the sorting and pagination fields and the result info

--- a/public/templates/v1.html
+++ b/public/templates/v1.html
@@ -30,7 +30,7 @@
 <div class="explorer-wrapper">
     <div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-lg-8 col-lg-offset-2">
-            <h3>Request</h3>
+            <h3 class="text-center">Request</h3>
             <div class="request margin-t-sm">
                 <code class="full-width">{{ ExplorerV1.data.queryUrl }}</code>
             </div>
@@ -38,8 +38,9 @@
     </div>
     <div class="row margin-t-lg" id="explorer-box">
         <div class="col-sm-10 col-sm-offset-1 col-lg-8 col-lg-offset-2">
-            <h3>Build Query</h3>
+            <h3 class="text-center">Build Query</h3>
             <form role="form" class="form-horizontal" ng-submit="ExplorerV1.search()">
+                <h4 class="text-center" ng-show="ExplorerV1.data.query.params.length">Fields</h4>
                 <div class="form-group" ng-repeat="param in ExplorerV1.data.query.params track by $index">
                     <label for="Field" class="col-xs-3 control-label text-center margin-t-sm visible-xs">
                         Field:
@@ -81,12 +82,70 @@
                 <div class="bg-info" ng-show="ExplorerV1.data.query.params.length < 1">
                     <p class="text-center pv"><strong>Click the "Add Field" button to get started.</strong></p>
                 </div>
-                <div class="form-group margin-t-lg">
+                <div class="row">
                     <div class="col-sm-12">
                         <button ng-click="ExplorerV1.addField()" class="btn btn-success" type="button">
                             <i class="fa fa-plus" aria-hidden="true"></i>&nbsp;Add Field
                         </button>
-                        <button type="submit" ng-disabled="!ExplorerV1.ready() || ExplorerV1.data.query.fetching" class="btn btn-primary pull-right">
+                    </div>
+                </div>
+                <div ng-show="ExplorerV1.data.query.params.length > 0">
+                    <hr>
+                    <h4 class="text-center">Sorting &amp; Pagination</h4>
+                    <div class="form-group">
+                        <label for="limit" class="col-xs-5 col-sm-2 control-label text-center">
+                            Limit:
+                        </label>
+                        <div class="col-sm-2 col-xs-7">
+                            <input id="limit" class="form-control" ng-model="ExplorerV1.limit" placeholder="Limit">
+                        </div>
+                        <label for="offset" class="col-xs-5 col-sm-2 control-label text-center">
+                            Offset:
+                        </label>
+                        <div class="col-sm-2 col-xs-7">
+                            <input id="offset" class="form-control" ng-model="ExplorerV1.offset" placeholder="Offset">
+                        </div>
+                        <label for="photo_num" class="col-xs-5 col-sm-2 control-label text-center">
+                            Num Photos:
+                        </label>
+                        <div class="col-sm-2 col-xs-7">
+                            <input id="photo_num" class="form-control" ng-model="ExplorerV1.num_photos" placeholder="# Photos">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="order_by" class="col-xs-5 col-sm-2 control-label text-center">
+                            Order By:
+                        </label>
+                        <div class="col-sm-2 col-xs-7">
+                            <input id="order_by" class="form-control" ng-model="ExplorerV1.orderby" placeholder="Order By">
+                        </div>
+                        <label for="sort_order" class="col-xs-5 col-sm-2 control-label text-center">
+                            Sort Order:
+                        </label>
+                        <div class="col-sm-2 col-xs-7">
+                            <select id="sort_order" class="form-control"
+                                    ng-model="ExplorerV1.sort_order"
+                                    ng-options="order.value as order.name for order in ExplorerV1.data.query.sort_orders">
+                                <option value="">Sort Order</option>
+                            </select>
+                        </div>
+                        <label for="sort_option" class="col-xs-5 col-sm-2 control-label text-center">
+                            Sort Option:
+                        </label>
+                        <div class="col-sm-2 col-xs-7">
+                            <select id="sort_option" class="form-control"
+                                    ng-model="ExplorerV1.sort_option"
+                                    ng-options="option.value as option.name for option in ExplorerV1.data.query.sort_options"
+                            >
+                                <option value="">Sort Option</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="form-group margin-t-lg">
+                    <div class="col-sm-12">
+                        <button type="submit" ng-disabled="!ExplorerV1.ready() || ExplorerV1.data.query.fetching" class="btn btn-primary">
                             <i class="fa fa-search" aria-hidden="true"></i>&nbsp;Search
                         </button>
                     </div>
@@ -97,7 +156,23 @@
     <hr>
     <div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-lg-8 col-lg-offset-2">
-            <h3 class="text-center">Results <span ng-show="ExplorerV1.data.query.results">:&nbsp;{{ExplorerV1.data.query.total_records}}</span><span class="pull-right" ng-show="ExplorerV1.data.query.time_elapsed">{{ExplorerV1.data.query.time_elapsed}}ms</span></h3>
+            <div class="row">
+                <div class="col-sm-4">
+                    <h3 ng-show="ExplorerV1.data.query.results" class="text-center">
+                        <span>Total Results: {{ExplorerV1.data.query.results.total_records}}</span>
+                    </h3>
+                </div>
+                <div class="col-sm-4">
+                    <h3 class="text-center">
+                        Results: <span ng-show="ExplorerV1.data.query.results">{{ExplorerV1.data.query.total_records}}</span>
+                    </h3>
+                </div>
+                <div class="col-sm-4">
+                    <h3 ng-show="ExplorerV1.data.query.time_elapsed" class="text-center">
+                        <span>{{ExplorerV1.data.query.time_elapsed}}ms</span>
+                    </h3>
+                </div>
+            </div>
             <code class="full-width text-center" ng-show="!ExplorerV1.data.query.results">
                 <div ng-show="!ExplorerV1.data.query.fetching">Click "Search" to hit the Retsrabbit V2 API!</div>
                 <div class="loader" ng-show="ExplorerV1.data.query.fetching">
