--- a/public/templates/landing.html
+++ b/public/templates/landing.html
@@ -6,7 +6,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><strong class="text-lg">V1</strong></div>
                 <div class="panel-body">
-                    <p>Information about v1.</p>
+                    <p>The original API offers a variety of query methods allowing developers to perform powerful queries such as wildcard searching.</p>
                     <a ui-sref="app.explorer-v1" class="btn btn-primary">Try it out</a>
                 </div>
             </div>
